# aramis

./: README.md
aramis_description/: CMakeLists.txt  README.md  aramis.urdf  package.xml
aramis_description/launch/: aramis_description.launch  aramis_display.launch  aramis_display.rviz  aramis_navigation.launch  aramis_navigation.rviz  aramis_navigation2.launch  gazebo.launch  octomap.launch  vrep_description.launch  vrep_display.rviz
aramis_description/meshes/: suporte_aramis.dae  suporte_armControl_mesh.dae  suporte_kinect_mesh.dae  tampa2_mesh.dae
aramis_description/meshes/p3dx_meshes/: top_mesh2.dae
aramis_description/robots/: aramis_description.xacro  frames.gv  pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_chassis.xacro  pioneer3dx_plugins.xacro  pioneer3dx_sonar.xacro  pioneer3dx_swivel.xacro  pioneer3dx_wheel.xacro  sensor_camera_usb_pioneer.urdf.xacro  sensor_sonar_pioneer.urdf.xacro  suporte_aramis_description.URDF  suporte_aramis_description.urdf
aramis_description/worlds/: pioneer_maze.world
aramis_navigation/: CMakeLists.txt  README.md  package.xml
aramis_navigation/config/: costmap_common.yaml  costmap_global_kinect.yaml  costmap_global_sonar.yaml  costmap_local.yaml  planner.yaml
aramis_navigation/launch/: gmapping.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch  move_base_vrep.xml  no_global_map.launch  rtab_rviz_test.launch  rtab_test.launch
aramis_navigation/src/: random_walk.cpp
aramis_vrep/: CMakeLists.txt  README.md  package.xml
aramis_vrep/config/: control.yaml  costmap_common.yaml  costmap_global_kinect.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.yaml
aramis_vrep/launch/: gmapping.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
sonar_viz/: CMakeLists.txt  README.md  package.xml
sonar_viz/include/sonar_viz/: SonarFakePtCloud.h  SonarRange.h
sonar_viz/src/: sonar_viz.cpp
vrep_odom_pioneer/: CMakeLists.txt  README.md  package.xml
vrep_odom_pioneer/src/: odom.cpp
